test from the fw

--- a/Projects/Engineering guide/Lectures/lec_3.tex
+++ b/Projects/Engineering guide/Lectures/lec_3.tex
@@ -1,6 +1,6 @@
 \chapter{Learning, how do you master the tools in order to make the best car possible?}
 
-\textcolor{red}{\underline{\textbf{Work in progress, this section is still being written and is not final.}}}
+\textcolor{green}{\underline{\textbf{Work in progress, this section is still being written and is not final.}}}
 
 \section{Fusion 360 : 3d modelling}
 
