removed dupe folder

--- a/Projects/Engineering guide/Lectures/lec_3.tex
+++ b/Projects/Engineering guide/Lectures/lec_3.tex
@@ -1,8 +1,8 @@
 \chapter{Learning, how do you master the tools in order to make the best car possible?}
 
-\textcolor{green}{\underline{\textbf{Work in progress, this section is still being written and is not final.}}}
+\textcolor{red}{\underline{\textbf{Work in progress, this section is still being written and is not final.}}}
 
-\section{Fusion 360 : 3d modelling}
+\section{Fusion 360 : s3d modelling}
 
 So you’ve read through the regulations and understand them and you’ve drawn up some sketches of how you want the car to look like. Now you have to design a 3d model of your ideas. When you open Fusion, there are three ways you can design the parts of your car. Each design method has its advantages, its disadvantages and thus, different components of the car will probably be designed with different tools. In this part, I will give a quick overview of each design method as well as other resources to master them and contacts in case you have questions.
 
@@ -28,7 +28,7 @@ Once you have your base body (created with extrude, loft or another tool) you wi
 
 \begin{itemize}
     \item Filet : rounds out edges and corners
-    \item Delete face : as the name implies, deletes faces and attempts to repair the body so that you keep a solid and you don’t get a surface body. \textbf{DOES NOT ALWAYS WORK}.
+    \item Delete face : as the name implies, deletes faces and attempts to repair the body so that you keep a solid and you don’t get a surface body. \textbf{DOES NOT ALWAYS WORK}. \todo{Add more examples²}
 \end{itemize}
 
 \subsection{Freeform modeling}
